# 2DGameEngine_Based_On_LibGraphics

./: .gitignore  2DEngine.code-workspace  2D游戏引擎GELG说明文档.md  CMakeLists.txt  README.en.md  README.md  一条龙跑起demo.bat  项目说明文档.md
res/scene1/: start_button_blue.txt  title_texture.txt
res/scene2/: back_button_texture.txt  playerBody.txt  player_down.txt  player_left.txt  player_right.txt
res/scene3/: replay_button.txt
src/2DEngine/: 2DEngine.c  2DEngine.h  actor.c  actor.h  component.c  component.h  input_manager.c  public_headers.h  scene.c  scene.h  scenes_manager.c  scenes_manager.h  shape.c  shape.h  vector.c  vector.h
src/2DEngine/libgraphics/: graphics.c  graphics.h  tags
src/2DGameEngine/: config.h
src/2DGameEngine/Engine/: 2DEngine.c  2DEngine.h  actor.c  actor.h  camera.c  camera.h  component.c  component.h  input_manager.c  input_manager.h  public_headers.c  public_headers.h  scene.c  scenes_manager.c  scenes_manager.h  shape.c  shape.h  vector.c  vector.h
src/2DGameEngine/Engine/components/: audio.c  audio.h  base_component.c  base_component.h  chartexture.c  chartexture.h  collision_shape.c  collision_shape.h  picTexture.c  picTexture.h  texture.c  texture.h  timer.c  timer.h  uitext.c  uitext.h
src/2DGameEngine/libgraphics/: graphics.c  graphics.h
src/demo/: game.c  game_conf.h  scene1.c  scene1.h  scene2.c  scene2.h  scene3.c  scene_info.h
src/demo/scene1/: background_pic.c  background_pic.h  scene1.c  scene1.h  scene1_bgm.c  scene1_bgm.h  startup_button.c  startup_button.h  startup_title.c  startup_title.h
src/demo/scene2/: count_down.c  count_down.h  pause_button.c  pause_button.h  player1.c  player1.h  player2.c  player2.h  room1_bkgnd.c  room1_bkgnd.h  scene2.c  scene2.h
test_env/: run.bat
test_env/res/scene1/: background_far_texture.txt  background_ground_texture.txt  start_button_red.txt  start_button_text.txt  start_button_texture.txt  startupButton.psd  title_texture.txt
test_env/res/scene2/: pause_button_texture.txt  player_up.txt  trace.txt
test_env/res/scene3/: chaserwin_texture.txt  escaperwin_texture.txt
test_env/res/texture/character/player/: playerTrace.txt
